multiclass classifier section completed

--- a/Section-4-Model-Performance-Evaluation/multiclass_classifier_performance.ipynb
+++ b/Section-4-Model-Performance-Evaluation/multiclass_classifier_performance.ipynb
@@ -10,6 +10,8 @@
     "<i>Exam Grades: A, B, C, D  \n",
     "Dress Size: Small, Medium, Large, X-Large</i>\n",
     "\n",
+    "- this was helpful for the micro macro weighted average section \n",
+    "\n",
     "<q><i>Typical metrics used in multiclass are the same as the metrics used in the binary classification case. The metric is calculated for each class by treating it as a binary classification problem after grouping all the other classes as belonging to the second class. Then the binary metric is averaged over all the classes to get either a macro average (treat each class equally) or weighted average (weighted by class frequency) metric.</i></q>\n",
     "\n",
     "Reference:<br>\n",
